# synda

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  database.db  pyproject.toml  requirements-dev.txt  requirements.txt  test_openrouter.py
.uv/: uv.toml
docs/: advanced_features.md  openrouter.md  package-lock.json
examples/: advanced_pipeline.yaml  custom_script.py  openrouter_example.yaml
nebula/: cli.py  utils.py
nebula/config/: __init__.py  ablation.py  config.py  generation.py  source.py  split.py  step.py
nebula/config/input/: csv.py  database.py  input.py
nebula/config/output/: csv.py  output.py  output_properties.py
nebula/config/parser/: ablation.py  generation.py  split.py  step.py
nebula/config/source/: csv.py  database.py  source.py  source_properties.py
nebula/config/step/: __init__.py  ablation.py  generation.py  split.py  step.py
nebula/pipeline/: executor.py  pipeline.py  pipeline_context.py
nebula/pipeline/ablation/: llm_judge_binary.py
nebula/pipeline/generation/: llm.py
nebula/pipeline/input/: __init__.py  csv_input_loader.py
nebula/pipeline/output/: __init__.py  csv_output_saver.py  output_saver.py
nebula/pipeline/split/: chunk.py
scripts/: test_uv_install.py
synda/: __init__.py  cli.py  database.py  progress_manager.py
synda/api/: app.py  client.py
synda/cli/: __init__.py  app.py  cache.py  generate.py  provider.py  server.py
synda/config/: ablation.py  clean.py  config.py  generation.py  input.py  metadata.py  output.py  split.py  step.py
synda/config/input/: csv.py  database.py  huggingface.py  input.py  input_properties.py  pdf.py  xls.py
synda/config/output/: csv.py  output.py  output_properties.py  xls.py
synda/model/: node.py  provider.py  run.py  step.py  step_node.py  utils.py
synda/pipeline/: async_executor.py  async_pipeline.py  executor.py  node.py  pipeline.py  pipeline_context.py
synda/pipeline/ablation/: __init__.py  async_llm_judge_binary.py  llm_judge_binary.py
synda/pipeline/clean/: __init__.py  deduplicates.py  deduplicates_embed.py  deduplicates_tf_idf.py  remove_duplicates.py
synda/pipeline/custom/: script_step.py
synda/utils/: batch_completion.py  cache.py  llm_provider.py  prompt_builder.py  ray_executor.py  template_parser.py  vllm_provider.py
tests/: test_llm_provider.py
(+33 files in other folders)
