[project]
name = "synda"
version = "0.7.0"
description = "A CLI for generating synthetic data"
authors = [
    {name = "Timothé Pearce", email = "timothe.pearce@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
keywords = ["synthetic data", "pipeline", "llm"]
requires-python = ">=3.10"
dependencies = [
    # Dependencies are now managed in requirements.txt
]

[project.urls]
repository = "https://github.com/timothepearce/synda"
documentation = "https://github.com/timothepearce/synda"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
synda = "synda.cli.app:main"

[tool.setuptools]
packages = ["synda"]

[tool.black]
line-length = 88
target-version = ["py310"]
